[project]
name = "comfyui-hunyuan-3d-2"
description = "Image to 3D using Hunyuan-3D-2"
version = "0.9.2"
license = {text = "MIT License"}

[project.urls]
Repository = "https://github.com/niknah/ComfyUI-Hunyuan-3D-2"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "niknah"
DisplayName = "ComfyUI Hunyuan-3D-2"
Icon = ""
